Fixed an issue caused by overflow-x on body element causing additional vertical scrollbar. Added new content to projectcards. Added overflow hidden for quotebar.

--- a/src/components/home/homeheader.css
+++ b/src/components/home/homeheader.css
@@ -27,6 +27,7 @@
     font-weight: 400;
     text-transform: uppercase;
     color: #F33A6A;
+    text-align: center;
 }
 
 @keyframes fade-in {
