--- a/src/components/projects/projectcard.css
+++ b/src/components/projects/projectcard.css
@@ -8,6 +8,7 @@
 	padding: 10px;
 	background-color: white;
 	border-radius: 20px;
+	overflow: hidden;
 }
 
 .projectCardImg {
