--- a/src/components/quote/quotebar.css
+++ b/src/components/quote/quotebar.css
@@ -1,5 +1,5 @@
 .quote-bar {
-
+  overflow: hidden;
 }
 
 /* Animation for quotebar FadeInOut */
